Better autoaim, not overshooting angle